--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,3 +11,34 @@ body {
     @apply text-5xl font-bold;
 }
 
+@media only screen and (max-width: 768px){
+    main.flex.flex-1 {
+    flex-direction: column;
+}
+
+.gap-8.mt-20.grid.grid-cols-2 {
+    display: flex;
+    flex-direction: column;
+}
+
+}
+
+.hideMenuNav {
+        display: none;
+      }
+      .showMenuNav {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        background: #121214;
+        z-index: 10;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        z-index: 9999
+      }
+
